--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="header-content">
             <div class="logo">in</div>
             <div class="search-bar">
-                <input type="text" placeholder="Search">
+                <input type="text" placeholder="github link : https://github.com/dgkim16/AA210_TricksterProfileAssignment">
             </div>
         </div>
     </header>
