--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="header-content">
             <div class="logo">in</div>
             <div class="search-bar">
-                <input type="text" placeholder="github link : https://github.com/dgkim16/AA210_TricksterProfileAssignment">
+                <input type="text" placeholder="Search... for what?">
             </div>
         </div>
     </header>
@@ -398,6 +398,12 @@
                     <span class="skill-tag" style="cursor: pointer;" onclick="alert('Gallagher, Instigator, Transformer')">Git</span>
                     <span class="skill-tag" style="cursor: pointer;" onclick="alert('Deception')">Trickery</span>
                 </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="section">
+                <h2 class="section-title">repo link</h2>
+                <p>https://github.com/dgkim16/AA210_TricksterProfileAssignment</p>
             </div>
         </div>
     </div>
